syntax = "proto3";
package nitric.proto.queues.v1;

import "google/protobuf/struct.proto";

// protoc plugin options for code generation
option go_package = "github.com/nitrictech/nitric/core/pkg/proto/queues/v1;queuespb";
option java_package = "io.nitric.proto.queues.v1";
option java_multiple_files = true;
option java_outer_classname = "QueuesService";
option php_namespace = "Nitric\\Proto\\Queues\\V1";
option csharp_namespace = "Nitric.Proto.Queues.v1";

// The Nitric Queue Service contract
service Queues {
  // Send messages to a queue
  rpc Enqueue (QueueEnqueueRequestBatch) returns (QueueEnqueueResponse);
  // Receive message(s) from a queue
  rpc Dequeue (QueueDequeueRequest) returns (QueueDequeueResponse);
  // Complete an item previously popped from a queue
  rpc Complete (QueueCompleteRequest) returns (QueueCompleteResponse);
}

message QueueEnqueueRequestBatch {
  // The Nitric name for the queue
  // this will automatically be resolved to the provider specific queue identifier.
  string queue_name = 1;
  // Array of tasks to push to the queue
  repeated QueueEnqueueRequest requests = 2;
}

// Response for sending a collection of tasks
message QueueEnqueueResponse {
  // A list of tasks that failed to be queued
  repeated FailedEnqueueRequest failed_requests = 1;
}

message QueueDequeueRequest {
  // The nitric name for the queue
  // this will automatically be resolved to the provider specific queue identifier.
  string queue_name = 1;
  // The max number of items to pop off the queue, may be capped by provider specific limitations
  int32 depth = 2;
}

message QueueDequeueResponse {
  // Array of tasks popped off the queue
  repeated ReceivedTask tasks = 1;
}

message QueueCompleteRequest {
  // The nitric name for the queue
  //  this will automatically be resolved to the provider specific queue identifier.
  string queue_name = 1;

  // Lease id of the task to be completed
  string lease_id = 2;
}

message QueueCompleteResponse {}

// A task to be sent to a queue.
message QueueEnqueueRequest {
  // The payload of the task
  google.protobuf.Struct payload = 1;
}

message ReceivedTask {
  string lease_id = 1;

  google.protobuf.Struct payload = 2;
}

message FailedEnqueueRequest {
  // The task that failed to be pushed
  QueueEnqueueRequest request = 1;
  // A message describing the failure
  string message = 2;
}
